# ME700-Assignment_3

./: README.md  README.txt  pyproject.toml
tutorials/: FEA_tutorial_1.md  example_1.ipynb  example_1.md  part_4_a.md
tutorials/Part_1/: FEA_tutorial_1.md
tutorials/Part_2/: mesh_quality_example.md
tutorials/part_4_a/: full_code_example_1_new.py  part_4_a.md
tutorials/part_4_b/: part_4_b.md
tutorials/part_4_c/: part_4_c.md
